// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyOrChildren does not render children and shows title and description 1`] = `
<Empty
  description="this is a title"
  image={<Simple />}
>
  <div>
    this is a rich description
  </div>
</Empty>
`;

exports[`EmptyOrChildren renders children if data is non empty List 1`] = `
<div>
  List [ "foo", "bar" ]
</div>
`;

exports[`EmptyOrChildren renders children if data is non empty Map 1`] = `
<div>
  Map { "foo": "bar" }
</div>
`;

exports[`EmptyOrChildren renders children if data is non empty array 1`] = `
<div>
  foo,bar
</div>
`;

exports[`EmptyOrChildren renders children if data is non empty object 1`] = `
<div>
  [object Object]
</div>
`;

exports[`EmptyOrChildren renders children if data is null 1`] = `
<div>
  object
</div>
`;

exports[`EmptyOrChildren renders empty if data is empty List 1`] = `
<Empty
  image={<Simple />}
/>
`;

exports[`EmptyOrChildren renders empty if data is empty Map 1`] = `
<Empty
  image={<Simple />}
/>
`;

exports[`EmptyOrChildren renders empty if data is empty array 1`] = `
<Empty
  image={<Simple />}
/>
`;

exports[`EmptyOrChildren renders empty if data is empty object 1`] = `
<Empty
  image={<Simple />}
/>
`;
